lustre/ofd/ofd_dev.c
@@ -1621,6 +1621,7 @@ static int ofd_create_hdl(struct tgt_session_info *tsi)
 		u64 next_id;
 		int created = 0;
 		int count;
+		int rc2;
 
 		if (!(oa->o_valid & OBD_MD_FLFLAGS) ||
 		    !(oa->o_flags & OBD_FL_DELORPHAN)) {
@@ -1708,7 +1709,8 @@ static int ofd_create_hdl(struct tgt_session_info *tsi)
 			granted = 0;
 		}
 
-		rc = ostid_set_id(&rep_oa->o_oi, ofd_seq_last_oid(oseq));
+		rc2 = ostid_set_id(&rep_oa->o_oi, ofd_seq_last_oid(oseq));
+		rc = rc ? : rc2;
 	}
 	EXIT;
 	ofd_counter_incr(exp, LPROC_OFD_STATS_CREATE,
